Fees method is partially working. Need to pass the fee to the background and change the table columns as well.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
         <activity android:name=".StudentDetailsActivity" />
         <activity android:name=".FeesActivity" />
         <activity android:name=".UnpaidStudentsActivity" />
-        <activity android:name=".CalenderActivity" />
-        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".Fees2Activity"></activity>
     </application>
 
 </manifest>
